crates/oxc_react_compiler/tests/snapshots/reduce-reactive-deps__superpath-order2.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reduce-reactive-deps/superpath-order2.js
---
import { c as _c } from "react/compiler-runtime";
// When an unconditional dependency `props.a` is the subpath of a conditional
// dependency `props.a.b`, we can safely overestimate and only track `props.a`
// as a dependency
import { identity } from "shared-runtime";
// ordering of accesses should not matter
function useConditionalSuperpath2(t0) {
	const $ = _c(3);
	const { props, cond } = t0;
	let x;
	if ($[0] !== cond || $[1] !== props.a) {
		x = {};
		if (identity(cond)) {
			x.b = props.a.b;
		}
		x.a = props.a;
		$[0] = cond;
		$[1] = props.a;
		$[2] = x;
	} else {
		x = $[2];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useConditionalSuperpath2,
	params: [{
		props: { a: null },
		cond: false
	}],
	sequentialRenders: [
		{
			props: { a: null },
			cond: false
		},
		{
			props: { a: {} },
			cond: true
		},
		{
			props: { a: { b: 3 } },
			cond: true
		},
		{
			props: {},
			cond: false
		},
		{
			props: { a: { b: undefined } },
			cond: true
		},
		{
			props: { a: undefined },
			cond: true
		}
	]
};
